--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
     <h1><%= link_to "CCM", root_path %> </h1>
       <nav>
         <ul>
-          <li><%= link_to "Cadastro", new_user_path %> </li>
+          <li><%= link_to t('layout.vehicles'), vehicles_path %> </li>
+          <li><%= link_to t('layout.signup'), new_user_path %> </li>
         </ul>
       </nav>
     </div>
