--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,3 @@
-<h1>Editar perfil</h1>
+<h1><%= t '.title' %> </h1>
 <%= render 'form' %>
-
-<%= link_to "Voltar", @user %>
+<%= link_to t('links.back'), @user %>
