--- a/app/views/vehicles/edit.html.erb
+++ b/app/views/vehicles/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing vehicle</h1>
+<h1><%= t '.title' %> </h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @vehicle %> |
-<%= link_to 'Back', vehicles_path %>
+<%= link_to t('links.back'), @vehicle %> |
+<%= link_to t('links.back'), vehicles_path %>
