--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <% if @user.errors.any? %>
 <div id="error_explanation">
-Há erros no formulário, por favor verifique.
+<%= t 'general.form_error' %>
 </div>
 <% end %>
 <%= form_for @user do |f| %>
