--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -1,37 +1,35 @@
-<%= form_for(@vehicle) do |f| %>
-  <% if @vehicle.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@vehicle.errors.count, "error") %> prohibited this vehicle from being saved:</h2>
+<% if @vehicle.errors.any? %>
+<div id="error_explanation">
+Há erros no formulário, não foi possivel salva. Por favor verifique.
+</div>
+<% end %>
 
-      <ul>
-      <% @vehicle.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_for @vehicle do |f| %>
+<p>
+<%= f.label :Marca %>
+<%= f.text_field :brand %>
+<%= error_tag @vehicle, :brand %>
+</p>
 
-  <div class="field">
-    <%= f.label :brand %><br>
-    <%= f.text_field :brand %>
-  </div>
-  <div class="field">
-    <%= f.label :model %><br>
-    <%= f.text_field :model %>
-  </div>
-  <div class="field">
-    <%= f.label :color %><br>
-    <%= f.text_field :color %>
-  </div>
-  <div class="field">
-    <%= f.label :type %><br>
-    <%= f.text_field :type %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
-  <div class="actions">
+<p>
+<%= f.label :Modelo %>
+<%= f.text_field :model %>
+<%= error_tag @vehicle, :model %>
+</p>
+
+<p>
+<%= f.label :Cor %>
+<%= f.text_field :color %>
+<%= error_tag @vehicle, :color %>
+</p>
+
+<p>
+<%= f.label :Tipo %>
+<%= f.text_field :type %>
+<%= error_tag @vehicle, :type %>
+</p>
+
+<p>
     <%= f.submit %>
-  </div>
+</p>
 <% end %>
