--- a/app/views/vehicles/new.html.erb
+++ b/app/views/vehicles/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New vehicle</h1>
+<h1><%= t '.title' %> </h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', vehicles_path %>
+<%= link_to t('links.back'), vehicles_path %>
