--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>CCM</title>
-  <link href='http://fonts.googleapis.com/css?family=Pacifico'
-  rel='stylesheet' type='text/css'>
-  <%= stylesheet_link_tag  "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <header>
-    <div id="header-wrap">
-    <h1><%= link_to "CCM", root_path %> </h1>
-      <nav>
-        <ul>
-          <li><%= link_to t('layout.vehicles'), vehicles_path %> </li>
-          <li><%= link_to t('layout.signup'), new_user_path %> </li>
-        </ul>
-      </nav>
+    <head>
+    <title>CCM</title>
+    <link href='http://fonts.googleapis.com/css?family=Pacifico'
+    rel='stylesheet' type='text/css'>
+    <%= stylesheet_link_tag  "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <header>
+      <div id="header-wrap">
+      <h1><%= link_to "CCM", root_path %> </h1>
+        <% if user_signed_in? %>
+          <%= render 'layouts/user_navbar' %>
+        <% else %>
+          <%= render 'layouts/visitor_navbar' %>
+        <% end %>
+      </div>
+    </header>
+    <div id="content">
+      <% if notice.present? %>
+      <p id="notice"><%= notice %> </p>
+      <% end %>
+      <% if alert.present? %>
+      <p id="alert"><%= alert %> </p>
+      <% end %>
+
+      <%= yield %>
+
     </div>
-  </header>
-  <div id="content">
-    <% if notice.present? %>
-    <p id="notice"><%= notice %> </p>
-    <% end %>
-    <% if alert.present? %>
-    <p id="alert"><%= alert %> </p>
-    <% end %>
-
-    <%= yield %>
-
-  </div>
-</body>
+  </body>
 </html>
